# macaroons_authz

./: .bazelignore  .buffalo.dev.yml  .env.example  .gitignore  .gitmodules  BUILD  Dockerfile  Gopkg.toml  Makefile  README.md  WORKSPACE  database.yml  docker-compose.yml  go.mod  main.go  package.json  tsconfig.json  user_keys.json
.github/: dependabot.yml
actions/: acos.go  app.go  auth.go  home.go  render.go  routes.go  users.go  users_test.go  vendors.go  vendors_test.go
assets/css/: application.scss
assets/js/: copy_handler.ts  helpers.ts  user_assign.ts  vendor_assign.ts
cfssl/: config_ca.json  csr_ROOT_CA.json  root_ca-key.pem  root_ca.csr  root_ca.pem
cli/: CMakeLists.txt  LoginInterceptor.hpp  Macaroon.cpp  Macaroon.hpp  SimpleLogger.hpp  UserInterceptor.cpp  UserInterceptor.hpp  main.cpp
cli/cmake/: Findlibmacaroons.cmake
cli/cppbakery/: CMakeLists.txt
cli/cppbakery/bakery/: CMakeLists.txt  Macaroon.cpp  Macaroon.hpp
cli/cppbakery/bakery/include/bakery/: Macaroon.hpp
cli/cppbakery/httpbakery/: CMakeLists.txt  client.cpp  client.hpp  helpers.hpp  interceptor.hpp
cli/cppbakery/httpbakery/include/httpbakery/: client.hpp
cli/login-gov/: CMakeLists.txt  CallbackHandler.cpp  CallbackHandler.hpp  LoginComponent.cpp  LoginComponent.hpp  LoginGuiHandler.cpp  LoginInterceptor.cpp  LoginInterceptor.hpp  SharedMemory.hpp
cmd/: client.go
cmd/client/: client.go
cmd/server/: server.go
cmd/tester/: macaroon_tester.go
db/: seeds_aco.csv  seeds_user.csv  seeds_vendor.csv
docs/: conf.py  flows.rst  index.rst  macaroons.rst
grifts/: db.go  init.go
java/: BUILD  README.md  config.yml  dependencies.yml  pom.xml
java/src/main/java/com/nickrobison/cmsauthz/: JavaClientApplication.java  JavaClientConfiguration.java
java/src/main/java/com/nickrobison/cmsauthz/api/: JWKResponse.java
java/src/main/java/com/nickrobison/cmsauthz/helpers/: Helpers.java  VarInt.java
java/src/main/java/com/nickrobison/cmsauthz/resources/: RootAPIResource.java
java/src/main/resources/: banner.txt
javascript/: BUILD  BUILD.bazel  package.json  tsconfig.json
javascript/src/: BUILD  BUILD.bazel  app.ts
javascript/src/controllers/: BUILD  BUILD.bazel  auth.ts  token.ts
javascript/typings/: BUILD  index.d.ts  js-macaroon.d.ts  js-macaroons.d.ts  macaroon.d.ts  retryer.d.ts
javascript/webpack/: webpack.common.js  webpack.dev.js  webpack.prod.js
lib/auth/: login-gov.go  thirdparty.go
lib/auth/ca/: ca.go  helpers.go
lib/auth/macaroons/: bakery.go  checkers.go  devstore.go  macaroons.go  strcmp.go  thirdpartystore.go
lib/helpers/: helpers.go
login-gov/: macdemo.crt  macdemo.key  openssl.conf  providers.diff
migrations/: 20181031143937_create_acoes.down.fizz  20181031143937_create_acoes.up.fizz  20181102175025_add_certificates.down.fizz  20181102175025_add_certificates.up.fizz  20181106144025_create_certificates.down.fizz  20181106144025_create_certificates.up.fizz  20181108172154_add_macaroon.down.fizz  20181108172154_add_macaroon.up.fizz  20181109164140_create_aco_users.down.fizz  20181109164140_create_aco_users.up.fizz  20181114191038_create_vendors.down.fizz  20181114191038_create_vendors.up.fizz  20181114191247_create_vendor_users.down.fizz  20181114191247_create_vendor_users.up.fizz  20181119150217_create_aco_vendors.down.fizz  20181119150217_create_aco_vendors.up.fizz
models/: aco.go  aco_test.go  aco_user.go  aco_user_test.go  aco_vendor.go  aco_vendor_test.go  certificate.go  certificate_test.go  models.go  user.go  vendor.go  vendor_test.go  vendor_user.go  vendor_user_test.go
packer/: cfssl.json  cms_authz.json  external_service.json  idp.json  internal_service.json  java_service.json  macaroons_authz.json  proxy.json  target_service.json
playbooks/: authz-entrypoint.sh  cfssl-entrypoint.sh  cfssl.yml  cms_authz.yml  idp-entrypoint.sh  idp.yml  internal_service.yml  java_service.yml  macaroons_authz.yml  proxy-entrypoint.sh  proxy.yml
proxy/: main.go
roles/ansible/tasks/: main.yml
roles/cleanup/: main.yml
templates/: application.html  index.html
templates/api/acos/: create.html  index.html  show.html
templates/api/users/: delete.html  index.html  show.html
templates/api/vendors/: create.html  index.html  show.html
templates/modals/: _login.html  _user.assign.html  _vendor.assign.html
terraform/dev/: main.tf
terraform/dev/.terraform/modules/: modules.json
terraform/idp/: main.tf  terraform.tfstate  terraform.tfstate.backup
terraform/modules/cfssl/: main.tf  outputs.tf  variables.tf
terraform/modules/db/: main.tf  outputs.tf  variables.tf
terraform/modules/idp/: main.tf  outputs.tf  variables.tf
terraform/sbx/: main.tf
